--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,7 +11,29 @@
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
         <script src="src/jquery-jqtree.min.js"></script>
         <script src="src/jquery-jqtree-bootstrap.min.js"></script>
-        <div id="tree"></div>
+        <div class="jumbotron">
+            <div class="container">
+                <h1>jQuery jqtree example</h1>
+                <p>Bootstrap example</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-4">
+                    <div id="tree"></div>
+                </div>
+                <div class="col-xs-12 col-sm-8">
+                    <p class="lead">Code:</p>
+                    <code>$.getJSON("data.json", function (data) {
+&nbsp;&nbsp;&nbsp;&nbsp;$("#tree").jqtree({
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data: data
+&nbsp;&nbsp;&nbsp;&nbsp;});
+});</code>
+                    <p class="lead">Data:</p>
+                    Find it <a href="data.json">here</a>.
+                </div>
+            </div>
+        </div>
         <script type="text/javascript">
             $(document).ready(function () {
                 $.getJSON("data.json", function (data) {
