Update bootstrap example

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -24,10 +24,10 @@
                 </div>
                 <div class="col-xs-12 col-sm-8">
                     <p class="lead">Code:</p>
-                    <code>$.getJSON("data.json", function (data) {
-&nbsp;&nbsp;&nbsp;&nbsp;$("#tree").jqtree({
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data: data
-&nbsp;&nbsp;&nbsp;&nbsp;});
+                    <code>$.getJSON("data.json", function (data) {<br />
+&nbsp;&nbsp;&nbsp;&nbsp;$("#tree").jqtree({<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data: data<br />
+&nbsp;&nbsp;&nbsp;&nbsp;});<br />
 });</code>
                     <p class="lead">Data:</p>
                     Find it <a href="data.json">here</a>.
