--- a/bootstrap.html
+++ b/bootstrap.html
@@ -24,11 +24,12 @@
                 </div>
                 <div class="col-xs-12 col-sm-8">
                     <p class="lead">Code:</p>
-                    <code>$.getJSON("data.json", function (data) {<br />
+                    <pre>$.getJSON("data.json", function (data) {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;$("#tree").jqtree({<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data: data<br />
 &nbsp;&nbsp;&nbsp;&nbsp;});<br />
-});</code>
+});</pre>
+                    <br />
                     <p class="lead">Data:</p>
                     Find it <a href="data.json">here</a>.
                 </div>
