--- a/bootstrap.html
+++ b/bootstrap.html
@@ -24,10 +24,10 @@
                 </div>
                 <div class="col-xs-12 col-sm-8">
                     <p class="lead">Code:</p>
-                    <pre>$.getJSON("data.json", function (data) {<br />
-&nbsp;&nbsp;&nbsp;&nbsp;$("#tree").jqtree({<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data: data<br />
-&nbsp;&nbsp;&nbsp;&nbsp;});<br />
+                    <pre>$.getJSON("data.json", function (data) {
+&nbsp;&nbsp;&nbsp;&nbsp;$("#tree").jqtree({
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data: data
+&nbsp;&nbsp;&nbsp;&nbsp;});
 });</pre>
                     <br />
                     <p class="lead">Data:</p>
